--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,5 +2,44 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Display
+## Enable the Corne OLED Display
+CONFIG_ZMK_DISPLAY=y
+## Invert display colors from black-on-white to white-on-black
+CONFIG_ZMK_DISPLAY_INVERT=n
+## Enable a widget to show the highest, active layer
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+## Enable a widget to show battery charge information
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+## If battery widget is enabled, show percentage instead of icons
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+## Enable a widget to show the current output (USB/BLE)
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+## Enable a widget to show words per minute
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+## Use the system main thread for UI updates
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
+## Use a dedicated thread for UI updates
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
+
+# Bluetooth
+## Enables future features
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+## Low level setting for GATT subscriptions, n to work around win bug
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+# Battery
+## Enables/disables all battery level detection/reporting to the host(PC)
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+# Power Management
+## Milliseconds of inactivity before entering idle state
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+## Enable deep sleep support
+CONFIG_ZMK_SLEEP=n
+## Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+## Enable soft off functionality from the keymap or dedicated hardware
+CONFIG_ZMK_PM_SOFT_OFF=n
+## Enable support to control external power output
+CONFIG_ZMK_EXT_POWER=y
