--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,13 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# System
+CONFIG_ZMK_KEYBOARD_NAME=KDCorne
+
+# USB
+## Enable ZMK as a USB keyboard
+CONFIG_ZMK_USB=y
+
+# Split
+## Enable split keyboard support
+CONFIG_ZMK_SPLIT=y
 
 # Display
 ## Enable the Corne OLED Display
@@ -23,6 +30,11 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 
 # Bluetooth
+## Enable Bluetooth support
+CONFIG_BT=y
+## Enable ZMK as a Bluetooth keyboard
+CONFIG_ZMK_BLE=y
+
 ## Enables future features
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 ## Low level setting for GATT subscriptions, n to work around win bug
@@ -43,3 +55,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_PM_SOFT_OFF=n
 ## Enable support to control external power output
 CONFIG_ZMK_EXT_POWER=y
+
+# Uncomment the following lines to enable the Corne RGB Underglow
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
