--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,5 @@
 # System
-CONFIG_ZMK_KEYBOARD_NAME=KDCorne
+CONFIG_ZMK_KEYBOARD_NAME='KDCorne'
 
 # USB
 ## Enable ZMK as a USB keyboard
@@ -48,7 +48,7 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 ## Milliseconds of inactivity before entering idle state
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 ## Enable deep sleep support
-CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_SLEEP=y
 ## Milliseconds of inactivity before entering deep sleep
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 ## Enable soft off functionality from the keymap or dedicated hardware
