--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,11 +3,11 @@ CONFIG_ZMK_KEYBOARD_NAME='KDCorne'
 
 # USB
 ## Enable ZMK as a USB keyboard
-CONFIG_ZMK_USB=y
+#CONFIG_ZMK_USB=y
 
 # Split
 ## Enable split keyboard support
-CONFIG_ZMK_SPLIT=y
+#CONFIG_ZMK_SPLIT=y
 
 # Display
 ## Enable the Corne OLED Display
