--- a/config/corne.conf
+++ b/config/corne.conf
@@ -34,6 +34,10 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 CONFIG_BT=y
 ## Enable ZMK as a Bluetooth keyboard
 CONFIG_ZMK_BLE=y
+## Disabling PHY 2Mbps
+CONFIG_BT_CTLR_PHY_2M=n
+## Passkey
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
 ## Enables future features
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
