--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,7 @@
 # System
 CONFIG_ZMK_KEYBOARD_NAME="KDCorne"
+## Milliseconds to wait after a setting change before writing it to flash memory
+## CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=60000
 
 # USB
 ## Enable ZMK as a USB keyboard
